--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Calculator Lab</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 </head>
 <body>
   <div id="calculator">
